Fix T77584: Edit Mode crash with shape keys created on blank mesh

Entering edit-mode after creating shape keys on a blank mesh would crash.

Regression in 9b9f84b317fef which prevented initializing empty
shape keys when there is no shape key offset data available.